--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,7 +13,7 @@
         "--max-line-length=119"
     ],
     "editor.codeActionsOnSave": {
-        "source.organizeImports": "explicit"
+        "source.organizeImports": "always",
     },
     "cSpell.words": [
         "dtypes"
@@ -21,9 +21,9 @@
     "python.testing.unittestArgs": [
         "-v",
         "-s",
-        "./test",
+        "./tests",
         "-p",
-        "test*.py"
+        "test_*.py"
     ],
     "python.testing.unittestEnabled": true
 }
