--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,12 @@
 {
     "name": "Jupyter Dev Container",
-    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.12",
+    "image": "mcr.microsoft.com/vscode/devcontainers/python:3.12-bookworm",
     "features": {
-        "docker-in-docker": "latest"
+        "docker-in-docker": {
+            "version": "latest",
+            "moby": true,
+            "dockerDashComposeVersion": "v1"
+        }
     },
     "customizations": {
         "vscode": {
@@ -18,7 +22,8 @@
                 "ms-python.pylint",
                 "streetsidesoftware.code-spell-checker",
                 "ms-vscode.live-server",
-                "GitHub.copilot"
+                "github.copilot",
+                "github.copilot-chat"
             ],
             "settings": {
                 "python.defaultInterpreterPath": "/usr/local/bin/python",
