--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -43,7 +43,7 @@
             }
         }
     },
-    "postCreateCommand": "python -m pip install --upgrade pip && pip install coverage isort jupyterlab odsbox[exd-data] grpcio grpcio-tools npTDMS",
+    "postCreateCommand": "python -m pip install --upgrade pip && pip install -e '.[dev]'",
     "forwardPorts": [
         8888
     ],
