cleanup and format

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,13 @@
     "files.trimTrailingWhitespace": true,
     "files.autoSave": "onFocusChange",
     "flake8.args": [
-        "--max-line-length=119"
+        "--max-line-length=109"
     ],
     "black-formatter.args": [
-        "--line-length=119"
+        "--line-length=109"
     ],
     "pylint.args": [
-        "--max-line-length=119"
+        "--max-line-length=109"
     ],
     "editor.codeActionsOnSave": {
         "source.organizeImports": "always",
@@ -19,10 +19,16 @@
         "appuser",
         "DCOMPLEX",
         "dtypes",
+        "grpcio",
+        "isort",
         "issubdtype",
+        "jupyterlab",
+        "mypy",
         "nptdms",
         "protoc",
+        "pylint",
         "pyproject",
+        "setuptools",
         "Tdms",
         "tobytes",
         "totonga"
