Feat/add file interface (#2)
* some cleanup

* make main configurable

* rework

* move main to datafile

* create folder

* cleanup

* moved stub files

* refactor registry

* add stub

* cleanup

* added __future__

* regenerate stub

* typing works now

* rework imports

* added tls functionallity

* added service running health check

* use factory to be more pythonic

* add last access time

* added some logging

* adjust typing

* clear project

* removed ignores

* new ReadME file

* cleanup and format

* update version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,19 +4,34 @@
     "files.trimTrailingWhitespace": true,
     "files.autoSave": "onFocusChange",
     "flake8.args": [
-        "--max-line-length=119"
+        "--max-line-length=109"
     ],
     "black-formatter.args": [
-        "--line-length=119"
+        "--line-length=109"
     ],
     "pylint.args": [
-        "--max-line-length=119"
+        "--max-line-length=109"
     ],
     "editor.codeActionsOnSave": {
         "source.organizeImports": "always",
     },
     "cSpell.words": [
-        "dtypes"
+        "appuser",
+        "DCOMPLEX",
+        "dtypes",
+        "grpcio",
+        "isort",
+        "issubdtype",
+        "jupyterlab",
+        "mypy",
+        "nptdms",
+        "protoc",
+        "pylint",
+        "pyproject",
+        "setuptools",
+        "Tdms",
+        "tobytes",
+        "totonga"
     ],
     "python.testing.unittestArgs": [
         "-v",
