--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Extract version number
         run: |
-          VERSION=$(python3 -c "import tomllib; print(tomllib.open('pyproject.toml', 'rb').read()['project']['version'])" 2>/dev/null || python3 -c "import toml; print(toml.load('pyproject.toml')['project']['version'])")
+          VERSION=$(python3 -c "import tomllib; print(tomllib.load(open('pyproject.toml', 'rb'))['project']['version'])")
           echo "VERSION=$VERSION" >> $GITHUB_ENV
 
       - name: Set up Docker Buildx
