--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-  # ...existing trigger configurations...
+  release:
+    types:
+      - published
 
 jobs:
   build:
